# pmap-tool

./: .gitignore  README.md  app.json  app.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh
app/: backend.py  io.py  main.py  model.py  output.py  params.py  plot.py  sidebar.py
archive/: app.py  utils.py
data/: brand data.xlsx  pmap dummy data.xlsx  sample.csv
notebooks/: Test analysis pmap.ipynb
pmap/: __init__.py  pmap.py  utils.py
src/: __init__.py  io.py  main.py  model.py  output.py  plot.py  pmap.py  rotator.py  sidebar.py  slicer.py  utils.py
src/test/: test_pmap.py  test_slicer.py  test_utils.py
streamlit/: app.py
tests/: test_backend.py  test_model.py  test_params.py
