[metadata]
name = pmap-tool
description = Heroku app to create perceptual maps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachomaiz/pmap-tool
download_url = https://github.com/nachomaiz/pmap-tool
version = file: VERSION
author = Ignacio Maiz Vilches
author_email = ignacio.maiz@gmail.com
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires = 
    openpyxl
    pandas
    matplotlib
    streamlit
    prince
    factor_analyzer; python_version < "3.10"

[options.packages.find]
exclude = 
    src/test*
    archive*
