[metadata]
name = pmap-tool
description = Heroku app to create perceptual maps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachomaiz/pmap-tool
download_url = https://github.com/nachomaiz/pmap-tool
version = file: VERSION
author = Ignacio Maiz Vilches
author_email = ignacio.maiz@gmail.com
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires = 
    altair==4.2.0
    matplotlib==3.5.1
    openpyxl==3.0.9
    numpy==1.22.3
    pandas==1.4.1
    prince==0.7.1
    factor_analyzer==0.4.0
    scikit_learn==1.0.2
    streamlit==1.7.0

[options.packages.find]
exclude = 
    src/test*
    archive*
