[metadata]
name = pmap-tool
description = Heroku app to create perceptual maps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachomaiz/pmap-tool
download_url = https://github.com/nachomaiz/pmap-tool
version = file: VERSION
author = Ignacio Maiz Vilches
author_email = ignacio.maiz@gmail.com
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires = 
    altair==4.2.0
    matplotlib==3.7.2
    openpyxl==3.1.2
    numpy==1.24
    pandas==1.5.1
    prince==0.7.1
    factor_analyzer==0.5.0
    scikit_learn==1.3
    streamlit==1.26.0

[options.packages.find]
exclude = 
    src/test*
    archive*
